TEST - Lobby create, join, leave, exceptions handling. Started documentation